- search filter added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      name="description"
+      content="This is a pokemon app in which you can search and also see the details of the pokemon"
+    />
+    <title>Pokemon App</title>
   </head>
   <body>
     <div id="root"></div>
